k8s/nginx/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: smartsport-cluster-ip-service
              servicePort: 8091
          - path: /?(.*)
            backend:
              serviceName: postgres-cluster-ip-service
              servicePort: 5432
